vor aljoscha